// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SunClockCircle with large dimensions and rising sun 1`] = `
<svg
  height="1200px"
  viewBox="0 0 1200 1200"
  width="1200px"
>
  <defs>
    <marker
      id="triangle"
      markerHeight="6"
      markerWidth="6"
      orient="auto"
      refX="1"
      refY="5"
      viewBox="0 0 10 10"
    >
      <path
        d="M 0 0 L 10 5 L 0 10 z"
      />
    </marker>
  </defs>
  <g
    className="jsx-3874083807"
  >
    <path
      className="jsx-3874083807"
      d="M 947.8426133929386 296.6466288513335 A 461.53846153846155 461.53846153846155 0 0 0 154.19676836176734 480.51263606473606"
    />
  </g>
  <g
    className="jsx-1129474558"
  >
    <path
      className="jsx-1129474558"
      d="M 149.40910864362348 500.0720254085172 A 461.53846153846155 461.53846153846155 0 1 0 960.7436325053152 312.1080357388209"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={600}
    x2={249.76445745081662}
    y1={600}
    y2={502.8436585903546}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={106.15384615384616}
    x={116.84674650959803}
    xmlns="http://www.w3.org/2000/svg"
    y={-101.84954555680474}
  >
    <g
      transform="translate(-57.69230769230769, -57.69230769230769)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={600}
      x2={600}
      y1={1003.8461538461538}
      y2={984.6153846153846}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={600}
      y={961.5384615384615}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={398.076923076923}
      x2={407.6923076923076}
      y1={949.7410284514078}
      y2={933.0866937632456}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250.25897154859211}
      x2={266.9133062367544}
      y1={801.9230769230771}
      y2={792.3076923076925}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={196.15384615384613}
      x2={215.38461538461536}
      y1={600.0000000000001}
      y2={600.0000000000001}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={265.38461538461536}
      y={600.0000000000001}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250.25897154859211}
      x2={266.91330623675435}
      y1={398.076923076923}
      y2={407.6923076923076}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={398.07692307692287}
      x2={407.6923076923075}
      y1={250.25897154859217}
      y2={266.91330623675447}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={600}
      x2={600}
      y1={196.15384615384613}
      y2={215.38461538461536}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={600}
      y={238.46153846153845}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={801.9230769230769}
      x2={792.3076923076923}
      y1={250.25897154859206}
      y2={266.9133062367543}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={949.7410284514078}
      x2={933.0866937632456}
      y1={398.076923076923}
      y2={407.6923076923076}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={1003.8461538461538}
      x2={984.6153846153846}
      y1={600}
      y2={600}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={934.6153846153846}
      y={600}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={949.7410284514079}
      x2={933.0866937632456}
      y1={801.9230769230769}
      y2={792.3076923076923}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={801.9230769230769}
      x2={792.3076923076923}
      y1={949.7410284514079}
      y2={933.0866937632456}
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle with long daylight hours 1`] = `
<svg
  height="500px"
  viewBox="0 0 500 500"
  width="500px"
>
  <defs>
    <marker
      id="triangle"
      markerHeight="6"
      markerWidth="6"
      orient="auto"
      refX="1"
      refY="5"
      viewBox="0 0 10 10"
    >
      <path
        d="M 0 0 L 10 5 L 0 10 z"
      />
    </marker>
  </defs>
  <g
    className="jsx-171440203"
  >
    <path
      className="jsx-171440203"
      d="M 391.59499061778666 380.1272729010293 A 192.3076923076923 192.3076923076923 0 1 0 106.51811589035631 378.0437325801495"
    />
  </g>
  <g
    className="jsx-4004874186"
  >
    <path
      className="jsx-4004874186"
      d="M 112.23986802216328 384.1804552017881 A 192.3076923076923 192.3076923076923 0 0 0 385.78415163813486 386.17970731581875"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={250}
    x2={326.87227001619885}
    y1={250}
    y2={119.5184815319495}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={44.230769230769226}
    x={328.7822823060786}
    xmlns="http://www.w3.org/2000/svg"
    y={-155.57980265107025}
  >
    <g
      transform="translate(-24.038461538461537, -24.038461538461537)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250.00000000000003}
      x2={250.00000000000003}
      y1={418.2692307692307}
      y2={410.2564102564102}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250.00000000000003}
      y={400.64102564102564}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.8653846153846}
      x2={169.87179487179486}
      y1={395.72542852141993}
      y2={388.7861224013523}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864771}
      y1={334.1346153846155}
      y2={330.1282051282052}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={81.73076923076925}
      x2={89.74358974358978}
      y1={250.00000000000003}
      y2={250.00000000000003}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={110.57692307692312}
      y={250.00000000000003}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864768}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.86538461538456}
      x2={169.8717948717948}
      y1={104.2745714785801}
      y2={111.21387759864774}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250}
      x2={250}
      y1={81.73076923076925}
      y2={89.74358974358978}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250}
      y={99.3589743589744}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={104.27457147858004}
      y2={111.21387759864768}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852141993}
      x2={388.7861224013523}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={418.2692307692307}
      x2={410.2564102564102}
      y1={250}
      y2={250}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={389.4230769230769}
      y={250}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852142}
      x2={388.7861224013523}
      y1={334.13461538461536}
      y2={330.1282051282051}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={395.72542852142}
      y2={388.7861224013523}
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle with long nighttime hours 1`] = `
<svg
  height="500px"
  viewBox="0 0 500 500"
  width="500px"
>
  <defs>
    <marker
      id="triangle"
      markerHeight="6"
      markerWidth="6"
      orient="auto"
      refX="1"
      refY="5"
      viewBox="0 0 10 10"
    >
      <path
        d="M 0 0 L 10 5 L 0 10 z"
      />
    </marker>
  </defs>
  <g
    className="jsx-171440203"
  >
    <path
      className="jsx-171440203"
      d="M 435.827161834496 200.49732890796622 A 192.3076923076923 192.3076923076923 0 0 0 137.65564523709003 93.91991006660882"
    />
  </g>
  <g
    className="jsx-4004874186"
  >
    <path
      className="jsx-4004874186"
      d="M 130.95445426653242 98.9688556564212 A 192.3076923076923 192.3076923076923 0 1 0 437.80957173833957 208.65011143701187"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={250}
    x2={141.975987052459}
    y1={250}
    y2={356.1394610212483}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={44.230769230769226}
    x={96.34124086594844}
    xmlns="http://www.w3.org/2000/svg"
    y={141.8865715640482}
  >
    <g
      transform="translate(-24.038461538461537, -24.038461538461537)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250.00000000000003}
      x2={250.00000000000003}
      y1={418.2692307692307}
      y2={410.2564102564102}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250.00000000000003}
      y={400.64102564102564}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.8653846153846}
      x2={169.87179487179486}
      y1={395.72542852141993}
      y2={388.7861224013523}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864771}
      y1={334.1346153846155}
      y2={330.1282051282052}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={81.73076923076925}
      x2={89.74358974358978}
      y1={250.00000000000003}
      y2={250.00000000000003}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={110.57692307692312}
      y={250.00000000000003}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={104.27457147858007}
      x2={111.21387759864768}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={165.86538461538456}
      x2={169.8717948717948}
      y1={104.2745714785801}
      y2={111.21387759864774}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250}
      x2={250}
      y1={81.73076923076925}
      y2={89.74358974358978}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={250}
      y={99.3589743589744}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={104.27457147858004}
      y2={111.21387759864768}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852141993}
      x2={388.7861224013523}
      y1={165.8653846153846}
      y2={169.87179487179486}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={418.2692307692307}
      x2={410.2564102564102}
      y1={250}
      y2={250}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={389.4230769230769}
      y={250}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={395.72542852142}
      x2={388.7861224013523}
      y1={334.13461538461536}
      y2={330.1282051282051}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={334.13461538461536}
      x2={330.1282051282051}
      y1={395.72542852142}
      y2={388.7861224013523}
    />
  </g>
</svg>
`;

exports[`Storyshots SunClockCircle with small dimensions and setting sun 1`] = `
<svg
  height="300px"
  viewBox="0 0 300 300"
  width="300px"
>
  <defs>
    <marker
      id="triangle"
      markerHeight="6"
      markerWidth="6"
      orient="auto"
      refX="1"
      refY="5"
      viewBox="0 0 10 10"
    >
      <path
        d="M 0 0 L 10 5 L 0 10 z"
      />
    </marker>
  </defs>
  <g
    className="jsx-1593371505"
  >
    <path
      className="jsx-1593371505"
      d="M 257.6545251197054 108.47756403212432 A 115.38461538461539 115.38461538461539 0 1 0 71.30174494602466 234.38124269596335"
    />
  </g>
  <g
    className="jsx-3147338448"
  >
    <path
      className="jsx-3147338448"
      d="M 75.05730635825414 237.73370012244465 A 115.38461538461539 115.38461538461539 0 0 0 259.3632450849163 113.21290862337496"
    />
  </g>
  <line
    markerEnd="url(#triangle)"
    stroke="black"
    strokeWidth={2}
    x1={150}
    x2={234.689648243572}
    y1={150}
    y2={117.0730869700511}
  />
  <svg
    overflow="visible"
    viewBox="0 0 520.85297 647.1869624999999"
    width={26.53846153846154}
    x={245.75270064906192}
    xmlns="http://www.w3.org/2000/svg"
    y={-36.321369755248384}
  >
    <g
      transform="translate(-14.423076923076923, -14.423076923076923)"
    >
      <path
        clipRule="evenodd"
        d="m 260.49299,0 -45.914,46.3192 -60.768,-23.7673 -22.957,61.0381 -64.954995,2.9726 3.782,64.9555 L 11.344,180.6864 41.322,238.6192 0,288.9902 l 50.91,40.7819 -17.285,62.7936 63.063995,16.4756 9.858005,64.4142 64.27999,-10.5327 35.11,54.8268 54.42201,-35.7865 54.42099,35.7865 35.246,-54.8268 64.279,10.5327 9.85801,-64.4142 63.065,-16.4756 -17.286,-62.7936 50.911,-40.7819 -41.458,-50.371 30.115,-57.9328 -58.338,-29.1683 3.913,-64.9555 L 389.861,83.59 366.904,22.5519 306.27,46.3192 260.49,0 Z m 0,73.4619 c 103.919,0 188.113,84.193 188.113,188.1126 0,103.9189 -84.194,188.247 -188.113,188.247 -103.919,0 -188.111995,-84.3281 -188.111995,-188.247 0,-103.9196 84.192995,-188.1126 188.111995,-188.1126 z m 0,28.4937 c -88.086,0 -159.618,71.5329 -159.618,159.6189 0,88.1546 71.463,159.6182 159.618,159.6182 88.15501,0 159.619,-71.4636 159.619,-159.6182 -0.07,-88.086 -71.464,-159.6189 -159.619,-159.6189 z"
        fillRule="evenodd"
      />
    </g>
  </svg>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={150}
      x2={150}
      y1={250.96153846153845}
      y2={246.15384615384616}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={150}
      y={240.3846153846154}
    >
      12 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={99.51923076923075}
      x2={101.9230769230769}
      y1={237.43525711285196}
      y2={233.2716734408114}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={62.56474288714803}
      x2={66.7283265591886}
      y1={200.48076923076928}
      y2={198.07692307692312}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={49.03846153846153}
      x2={53.84615384615384}
      y1={150.00000000000003}
      y2={150.00000000000003}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={66.34615384615384}
      y={150.00000000000003}
    >
      6 am
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={62.56474288714803}
      x2={66.72832655918859}
      y1={99.51923076923075}
      y2={101.9230769230769}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={99.51923076923072}
      x2={101.92307692307688}
      y1={62.56474288714804}
      y2={66.72832655918862}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={150}
      x2={150}
      y1={49.03846153846153}
      y2={53.84615384615384}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={150}
      y={59.61538461538461}
    >
      12 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={200.48076923076923}
      x2={198.07692307692307}
      y1={62.564742887148014}
      y2={66.72832655918857}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={237.43525711285196}
      x2={233.2716734408114}
      y1={99.51923076923075}
      y2={101.9230769230769}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={250.96153846153845}
      x2={246.15384615384616}
      y1={150}
      y2={150}
    />
    <text
      alignmentBaseline="central"
      textAnchor="middle"
      x={233.65384615384616}
      y={150}
    >
      6 pm
    </text>
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={237.43525711285199}
      x2={233.2716734408114}
      y1={200.48076923076923}
      y2={198.07692307692307}
    />
  </g>
  <g>
    <line
      stroke="black"
      strokeWidth={4}
      x1={200.48076923076923}
      x2={198.07692307692307}
      y1={237.43525711285199}
      y2={233.2716734408114}
    />
  </g>
</svg>
`;
